tests/expectations/compiler/signature/signature_with_wrong_types_fail.out
Error [ETYC0372117]: Expected type `signature` but type `address` was found.
    --> compiler-test:8:45
     |
   8 |         let first: bool = signature::verify(a, s, v);
     |                                             ^
Error [ETYC0372117]: Expected type `address` but type `signature` was found.
    --> compiler-test:8:48
     |
   8 |         let first: bool = signature::verify(a, s, v);
     |                                                ^
Error [ETYC0372117]: Expected type `address` but type `u8` was found.
    --> compiler-test:9:37
     |
   9 |         let second: bool = s.verify(1u8, v);
     |                                     ^^^
Error [ETYC0372117]: Expected type `signature` but type `address` was found.
    --> compiler-test:14:45
     |
  14 |         let first: bool = signature::verify(a, v, s);
     |                                             ^
Error [ETYC0372117]: Expected type `address` but type `test.aleo::foo` was found.
    --> compiler-test:14:48
     |
  14 |         let first: bool = signature::verify(a, v, s);
     |                                                ^
Error [ETYC0372117]: Expected type `address` but type `test.aleo::foo` was found.
    --> compiler-test:15:37
     |
  15 |         let second: bool = s.verify(v, a);
     |                                     ^
